# advisoryops

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_MVP.md  RELEASE_NOTES.md  advisoryops_build_plan.md  advisoryops_build_plan_v2_addendum.md  advisoryops_vision.md  check_disabled.py  extract.py  grant_strategy_document_v2.md  master_source_list.md  master_source_list_complete.md  napshot before fixing extract OpenAI SDK call (openai==2.17.0)  pyproject.toml  requirements.txt  sample_test_report.md
.claude/: settings.json  settings.local.json
configs/: community_public_sources.json  mitigation_playbook.json  source_weights.json  sources.json  sources_expansion_candidates.json
dashboard/: index.html
docs/: DOC-01_Master_Index.md  DOC-02_Data_Contracts.md  DOC-03_Mitigation_Playbook.md  DOC-04_Integrations.md  DOC-04_Integrations_revised_20260317.md  DOC-05_Ingestion.md  DOC-06_Matching.md  DOC-07_Evaluation.md  DOC-07_Evaluation_revised_20260317.md  DOC-08_Grant_Draft.md  DOC-08_Grant_Draft_revised_20260317.md  DOC-09_Prototype_Plan.md  DOC-10_Stack_and_Deployment.md  DOC-11_Community_Public_v0.md  Feature 1 Spec — FDA Risk Class Ext.txt  STATUS.md  architecture.md  data_rights.md  feed.csv  feed.xml  feed_class_3.xml  feed_contract.json  feed_healthcare.json  feed_healthcare.xml  feed_kev_medical_device.xml  feed_latest.json  feed_p0_p1.xml  grant_cost_model.md  index.html  kev_medical_device_analysis.md  meta.json  playbook_governance.md  schema.md  scoring_internals.md  session_state.md  validated_sources.json
scripts/: backfill_all.py  (+21 more)
(+165 files in other folders)
